--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
-streamlit
-opencv-python
-numpy
-keras
-matplotlib
+opencv-python == 4.9.0.80
+numpy == 1.26.4
+keras == 2.10.0
+matplotlib == 3.8.3
