--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-opencv-python == 4.9.0.80
+streamlit == 1.32.2
+opencv-contrib-python == 4.9.0.80
 numpy == 1.26.4
 keras == 2.10.0
 matplotlib == 3.8.3
