--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-streamlit == 1.32.2
-numpy == 1.26.4
-keras == 3.1.1
+streamlit == 1.30.0
+opencv-python-headless == 4.9.0.80
+numpy == 1.23.5
+keras == 2.12.0
 matplotlib == 3.8.3
-tensorflow == 2.16.1
+tensorflow == 2.12.0
