--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,9 @@ numpy == 1.23.5
 keras == 2.12.0
 matplotlib == 3.8.3
 tensorflow == 2.12.0
+pandas == 2.2.1
+librosa == 0.10.1
+sounddevice == 0.4.6
+soundfile == 0.12.1
+pyaudio == 0.2.14
+scikit-learn == 1.4.1.post1
