--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ keras == 2.12.0
 matplotlib == 3.8.3
 tensorflow == 2.12.0
 pandas == 2.2.1
+pyaudio == 0.2.14
 librosa == 0.10.1
 sounddevice == 0.4.6
 soundfile == 0.12.1
