--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -3,7 +3,7 @@ opencv-python-headless == 4.9.0.80
 numpy == 1.23.5
 keras == 2.12.0
 matplotlib == 3.8.3
-tensorflow == 2.12.0
+tensorflow-gpu==2.10.0
 pandas == 2.2.1
 pyaudio == 0.2.14
 librosa == 0.10.1
